# materialize

./: .bazelrc  BUILD.bazel
ci/builder/: Dockerfile
ci/test/: pipeline.template.yml
misc/bazel/: BUILD.bazel
misc/bazel/cargo-gazelle/: BUILD.bazel
misc/bazel/cargo-gazelle/src/: header.rs
src/adapter/: BUILD.bazel
src/adapter-types/: BUILD.bazel
src/alloc/: BUILD.bazel
src/alloc-default/: BUILD.bazel
src/arrow-util/: BUILD.bazel
src/audit-log/: BUILD.bazel
src/avro/: BUILD.bazel
src/aws-secrets-controller/: BUILD.bazel
src/aws-util/: BUILD.bazel
src/balancerd/: BUILD.bazel
src/build-info/: BUILD.bazel
src/build-tools/: BUILD.bazel
src/catalog/: BUILD.bazel
src/catalog-debug/: BUILD.bazel
src/ccsr/: BUILD.bazel
src/cloud-api/: BUILD.bazel
src/cloud-resources/: BUILD.bazel
src/cluster/: BUILD.bazel
src/cluster-client/: BUILD.bazel
src/clusterd/: BUILD.bazel
src/compute/: BUILD.bazel
src/compute-client/: BUILD.bazel
src/compute-types/: BUILD.bazel
src/controller/: BUILD.bazel
src/controller-types/: BUILD.bazel
src/durable-cache/: BUILD.bazel
src/dyncfg/: BUILD.bazel
src/dyncfg-launchdarkly/: BUILD.bazel
src/dyncfgs/: BUILD.bazel
src/environmentd/: BUILD.bazel  Cargo.toml
src/expr/: BUILD.bazel
src/expr-parser/: BUILD.bazel
src/expr-test-util/: BUILD.bazel
src/fivetran-destination/: BUILD.bazel
src/frontegg-auth/: BUILD.bazel
src/frontegg-client/: BUILD.bazel
src/frontegg-mock/: BUILD.bazel
src/http-util/: BUILD.bazel
src/interchange/: BUILD.bazel
src/kafka-util/: BUILD.bazel
src/lowertest/: BUILD.bazel
src/lowertest-derive/: BUILD.bazel
src/lsp-server/: BUILD.bazel
src/metabase/: BUILD.bazel
src/metrics/: BUILD.bazel
src/mysql-util/: BUILD.bazel
src/mz/: BUILD.bazel
src/npm/: BUILD.bazel
src/orchestrator/: BUILD.bazel
src/orchestrator-kubernetes/: BUILD.bazel
src/orchestrator-process/: BUILD.bazel
src/orchestrator-tracing/: BUILD.bazel
src/orchestratord/: BUILD.bazel
src/ore/: BUILD.bazel
src/ore-proc/: BUILD.bazel
src/persist/: BUILD.bazel
src/persist-cli/: BUILD.bazel
src/persist-client/: BUILD.bazel  Cargo.toml
src/persist-client/src/: schema.rs
src/persist-proc/: BUILD.bazel
src/persist-types/: BUILD.bazel
src/persist-types/src/: codec_impls.rs  schema.rs
src/pgcopy/: BUILD.bazel
src/pgrepr/: BUILD.bazel
src/pgrepr-consts/: BUILD.bazel
src/pgtest/: BUILD.bazel
src/pgtz/: BUILD.bazel
src/pgwire/: BUILD.bazel
src/pgwire-common/: BUILD.bazel
src/postgres-client/: BUILD.bazel
src/postgres-util/: BUILD.bazel
src/prof/: BUILD.bazel
src/prof-http/: BUILD.bazel
src/proto/: BUILD.bazel
src/proto/src/: lib.rs
src/regexp/: BUILD.bazel
src/repr/: BUILD.bazel
src/repr-test-util/: BUILD.bazel
src/repr/src/adt/: timestamp.rs
src/repr/src/row/: encoding2.rs
src/rocksdb/: BUILD.bazel
src/rocksdb-types/: BUILD.bazel
src/s3-datagen/: BUILD.bazel
src/secrets/: BUILD.bazel
src/segment/: BUILD.bazel
src/server-core/: BUILD.bazel
src/service/: BUILD.bazel
src/sql/: BUILD.bazel
src/sql-lexer/: BUILD.bazel
src/sql-parser/: BUILD.bazel
src/sql-pretty/: BUILD.bazel
src/sqllogictest/: BUILD.bazel
src/ssh-util/: BUILD.bazel
src/storage/: BUILD.bazel
src/storage-client/: BUILD.bazel
src/storage-controller/: BUILD.bazel
src/storage-operators/: BUILD.bazel
src/storage-types/: BUILD.bazel
src/storage-types/src/: sources.rs
src/testdrive/: BUILD.bazel
src/timely-util/: BUILD.bazel
src/timestamp-oracle/: BUILD.bazel
src/tls-util/: BUILD.bazel
src/tracing/: BUILD.bazel
src/transform/: BUILD.bazel
src/txn-wal/: BUILD.bazel
src/walkabout/: BUILD.bazel
src/workspace-hack/: BUILD.bazel  Cargo.toml
test/metabase/smoketest/: BUILD.bazel
test/test-util/: BUILD.bazel
